--- a/Alpha/AlphaMvc/Reports/RptBDC.rdlc
+++ b/Alpha/AlphaMvc/Reports/RptBDC.rdlc
@@ -2125,7 +2125,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>ISO (F-ARS-12 Rev.00 (23 September 2015))</Value>
+                  <Value>F-ARS-12 Rev.00 (23 September 2015)</Value>
                   <Style>
                     <FontFamily>cordia New</FontFamily>
                     <FontSize>12pt</FontSize>
