--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -144,7 +144,8 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'BDC', 0)">Save</button>
+                    <button type="button" class="btn btn-primary mgr10" onclick="Isvalidate('Create', 'BDC', 0)">Save</button>
+                    <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
                     @*id="Create"*@
                 </li>
             </ul>
