--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -112,7 +112,8 @@
                 </li>
                 <br />
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ProductAdjust', 0)">Save</button>
+                    <button type="button" class="btn btn-primary mgr10" onclick="Isvalidate('Create', 'ProductAdjust', 0)">Save</button>
+                    <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
                 </li>
             </ul>
         </form>
