--- a/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
@@ -112,7 +112,8 @@
                     <input type="text" id="txtDeduction"  style="text-align:right;" name="field6" class="Number field-select-small" placeholder="" value="0" onblur="GetDeduct()"/>&nbsp;
                 </li>
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'ProductAdjust', @Request.Params["id"])">Save</button>
+                    <button type="button" class="btn btn-primary mgr10" onclick="Isvalidate('Update', 'ProductAdjust', @Request.Params["id"])">Save</button>
+                    <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
                 </li>
             </ul>
         </form>
