--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -169,7 +169,8 @@
                     <div class="row">
                         <div class="col-xs-4 col-sm-3 col-lg-2">
                             <div class="form-group">
-                                <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'Products', 0)">Save</button>
+                                <button type="button" class="btn btn-primary mgr10" onclick="Isvalidate('Create', 'Products', 0)">Save</button>
+                                <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
                             </div>
                         </div>
                     </div>
