--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -164,7 +164,8 @@
                 <div class="row">
                     <div class="col-xs-4 col-sm-3 col-lg-2">
                         <div class="form-group">
-                            <button type="button" id="btnSave" class="btn btn-primary" onclick="validate()">Save</button>
+                            <button type="button" id="btnSave" class="btn btn-primary mgr10" onclick="validate()">Save</button>
+                            <button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
                             @*<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'Products', 0)">Save</button>*@
                         </div>
                     </div>
