--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,6 +20,10 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.mgr10
+{
+    margin-right: 10px;
+}
 .tdredColor
 {
     background-color: rgba(240, 31, 31,0.4) !important;
@@ -2374,9 +2378,12 @@ fieldset[disabled] .btn-default.active {
   /*color: #ffffff;
   background-color: #428bca;
   border-color: #357ebd;*/
+    
+    /*background-color: #f1a250;
+    border-color: #f1a250;*/
     color: #ffffff;
-    background-color: #f1a250;
-    border-color: #f1a250;
+    background-color: #4b7490;
+    border-color: #4b7490;
     height: 35px;
     width: 85px;
 }
@@ -2461,6 +2468,8 @@ fieldset[disabled] .btn-warning.active {
   color: #ffffff;
   background-color: #d9534f;
   border-color: #d43f3a;
+  height: 35px;
+  width: 85px;
 }
 
 .btn-danger:hover,
