--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -26,7 +26,7 @@
                 <input type="text" id="txtSeq" class="field-divided text-size40 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="1" />
             </li>
             <li>
-                <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button>
+                <button type="button" class="btn btn-primary mgr10" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button><button type="button" id="btnCancel" class="btn btn-danger" onclick="Redirect()">Cancel</button>
             </li>
         </ul>
         <br />
