--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -25,7 +25,7 @@
                         <input type="text" id="txtSeq" class="field-divided text-size40 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="1" />
                     </li>
                     <li>
-                        <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'IncomeMaster', 0)">Save</button>
+                        <button type="button" class="btn btn-primary mgr10" onclick="Isvalidate('Create', 'IncomeMaster', 0)">Save</button><button type="button" class="btn btn-danger" onclick="Redirect()">Cancel</button>
                     </li>
                 </ul>
                 <br />
